@@ -36,33 +36,32 @@ import java.util.List;
  *
  * @since 0.1
  */
-public class ClassUtils {
-
-    //TODO - complete JavaDoc
+public final class ClassUtils {
 
     /**
      * Private internal log instance.
      */
-    private static final Logger log = LoggerFactory.getLogger(ClassUtils.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(ClassUtils.class);
 
+    private static final ThreadLocal<ClassLoader> ADDITIONAL_CLASS_LOADER = new ThreadLocal<>();
 
     /**
      * SHIRO-767: add a map to mapping primitive data type
      */
-    private static final HashMap<String, Class<?>> primClasses
+    private static final HashMap<String, Class<?>> PRIM_CLASSES
             = new HashMap<>(8, 1.0F);
-    static {
-        primClasses.put("boolean", boolean.class);
-        primClasses.put("byte", byte.class);
-        primClasses.put("char", char.class);
-        primClasses.put("short", short.class);
-        primClasses.put("int", int.class);
-        primClasses.put("long", long.class);
-        primClasses.put("float", float.class);
-        primClasses.put("double", double.class);
-        primClasses.put("void", void.class);
-    }
 
+    static {
+        PRIM_CLASSES.put("boolean", boolean.class);
+        PRIM_CLASSES.put("byte", byte.class);
+        PRIM_CLASSES.put("char", char.class);
+        PRIM_CLASSES.put("short", short.class);
+        PRIM_CLASSES.put("int", int.class);
+        PRIM_CLASSES.put("long", long.class);
+        PRIM_CLASSES.put("float", float.class);
+        PRIM_CLASSES.put("double", double.class);
+        PRIM_CLASSES.put("void", void.class);
+    }
 
     /**
      * @since 1.0
@@ -77,10 +76,21 @@ public class ClassUtils {
     /**
      * @since 1.0
      */
-    private static final ClassLoaderAccessor CLASS_CL_ACCESSOR = new ExceptionIgnoringAccessor() {
+    private static final ClassLoaderAccessor CLASS_LANG_CL_ACCESSOR = new ExceptionIgnoringAccessor() {
         @Override
         protected ClassLoader doGetClassLoader() throws Throwable {
             return ClassUtils.class.getClassLoader();
+        }
+    };
+
+    /**
+     * @since 2.0.4
+     */
+    private static final ClassLoaderAccessor ADDITIONAL_CL_ACCESSOR = new ExceptionIgnoringAccessor() {
+        @Override
+        protected ClassLoader doGetClassLoader() throws Throwable {
+            ClassLoader cl = ADDITIONAL_CLASS_LOADER.get();
+            return cl != null ? cl : ClassUtils.class.getClassLoader();
         }
     };
 
@@ -94,6 +104,10 @@ public class ClassUtils {
         }
     };
 
+    private ClassUtils() {
+
+    }
+
     /**
      * Returns the specified resource by checking the current thread's
      * {@link Thread#getContextClassLoader() context class loader}, then the
@@ -103,7 +117,7 @@ public class ClassUtils {
      *
      * @param name the name of the resource to acquire from the classloader(s).
      * @return the InputStream of the resource found, or <code>null</code> if the resource cannot be found from any
-     *         of the three mentioned ClassLoaders.
+     * of the three mentioned ClassLoaders.
      * @since 0.9
      */
     public static InputStream getResourceAsStream(String name) {
@@ -111,24 +125,32 @@ public class ClassUtils {
         InputStream is = THREAD_CL_ACCESSOR.getResourceStream(name);
 
         if (is == null) {
-            if (log.isTraceEnabled()) {
-                log.trace("Resource [" + name + "] was not found via the thread context ClassLoader.  Trying the " +
-                        "current ClassLoader...");
+            if (LOGGER.isTraceEnabled()) {
+                LOGGER.trace("Resource [" + name + "] was not found via the thread context ClassLoader.  Trying the "
+                        + "current ClassLoader...");
             }
-            is = CLASS_CL_ACCESSOR.getResourceStream(name);
+            is = CLASS_LANG_CL_ACCESSOR.getResourceStream(name);
         }
 
         if (is == null) {
-            if (log.isTraceEnabled()) {
-                log.trace("Resource [" + name + "] was not found via the current class loader.  Trying the " +
-                        "system/application ClassLoader...");
+            if (LOGGER.isTraceEnabled()) {
+                LOGGER.trace("Resource [" + name + "] was not found via the org.apache.shiro.lang ClassLoader.  Trying the "
+                        + "additionally set ClassLoader...");
+            }
+            is = ADDITIONAL_CL_ACCESSOR.getResourceStream(name);
+        }
+
+        if (is == null) {
+            if (LOGGER.isTraceEnabled()) {
+                LOGGER.trace("Resource [" + name + "] was not found via the current class loader.  Trying the "
+                        + "system/application ClassLoader...");
             }
             is = SYSTEM_CL_ACCESSOR.getResourceStream(name);
         }
 
-        if (is == null && log.isTraceEnabled()) {
-            log.trace("Resource [" + name + "] was not found via the thread context, current, or " +
-                    "system/application ClassLoaders.  All heuristics have been exhausted.  Returning null.");
+        if (is == null && LOGGER.isTraceEnabled()) {
+            LOGGER.trace("Resource [" + name + "] was not found via the thread context, current, or "
+                    + "system/application ClassLoaders.  All heuristics have been exhausted.  Returning null.");
         }
 
         return is;
@@ -146,38 +168,46 @@ public class ClassUtils {
      * @return the located class
      * @throws UnknownClassException if the class cannot be found.
      */
-    public static Class forName(String fqcn) throws UnknownClassException {
-
-        Class clazz = THREAD_CL_ACCESSOR.loadClass(fqcn);
+    @SuppressWarnings("unchecked")
+    public static <T> Class<T> forName(String fqcn) throws UnknownClassException {
+        Class<?> clazz = THREAD_CL_ACCESSOR.loadClass(fqcn);
 
         if (clazz == null) {
-            if (log.isTraceEnabled()) {
-                log.trace("Unable to load class named [" + fqcn +
-                        "] from the thread context ClassLoader.  Trying the current ClassLoader...");
+            if (LOGGER.isTraceEnabled()) {
+                LOGGER.trace("Unable to load class named [" + fqcn
+                        + "] from the thread context ClassLoader.  Trying the current ClassLoader...");
             }
-            clazz = CLASS_CL_ACCESSOR.loadClass(fqcn);
+            clazz = CLASS_LANG_CL_ACCESSOR.loadClass(fqcn);
         }
 
         if (clazz == null) {
-            if (log.isTraceEnabled()) {
-                log.trace("Unable to load class named [" + fqcn + "] from the current ClassLoader.  " +
-                        "Trying the system/application ClassLoader...");
+            if (LOGGER.isTraceEnabled()) {
+                LOGGER.trace("Unable to load class named [" + fqcn
+                        + "] from the org.apache.shiro.lang ClassLoader.  Trying the additionally set ClassLoader...");
+            }
+            clazz = ADDITIONAL_CL_ACCESSOR.loadClass(fqcn);
+        }
+
+        if (clazz == null) {
+            if (LOGGER.isTraceEnabled()) {
+                LOGGER.trace("Unable to load class named [" + fqcn + "] from the current ClassLoader.  "
+                        + "Trying the system/application ClassLoader...");
             }
             clazz = SYSTEM_CL_ACCESSOR.loadClass(fqcn);
         }
 
         if (clazz == null) {
             //SHIRO-767: support for getting primitive data type,such as int,double...
-            clazz = primClasses.get(fqcn);
+            clazz = PRIM_CLASSES.get(fqcn);
         }
 
         if (clazz == null) {
-            String msg = "Unable to load class named [" + fqcn + "] from the thread context, current, or " +
-                    "system/application ClassLoaders.  All heuristics have been exhausted.  Class could not be found.";
+            String msg = "Unable to load class named [" + fqcn + "] from the thread context, current, or "
+                    + "system/application ClassLoaders.  All heuristics have been exhausted.  Class could not be found.";
             throw new UnknownClassException(msg);
         }
 
-        return clazz;
+        return (Class<T>) clazz;
     }
 
     public static boolean isAvailable(String fullyQualifiedClassName) {
@@ -197,37 +227,36 @@ public class ClassUtils {
         return newInstance(forName(fqcn), args);
     }
 
-    public static Object newInstance(Class clazz) {
+    public static Object newInstance(Class<?> clazz) {
         if (clazz == null) {
             String msg = "Class method parameter cannot be null.";
             throw new IllegalArgumentException(msg);
         }
         try {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new InstantiationException("Unable to instantiate class [" + clazz.getName() + "]", e);
         }
     }
 
-    public static Object newInstance(Class clazz, Object... args) {
-        Class[] argTypes = new Class[args.length];
+    public static Object newInstance(Class<?> clazz, Object... args) {
+        var argTypes = new Class<?>[args.length];
         for (int i = 0; i < args.length; i++) {
             argTypes[i] = args[i].getClass();
         }
-        Constructor ctor = getConstructor(clazz, argTypes);
+        Constructor<?> ctor = getConstructor(clazz, argTypes);
         return instantiate(ctor, args);
     }
 
-    public static Constructor getConstructor(Class clazz, Class... argTypes) {
+    public static Constructor<?> getConstructor(Class<?> clazz, Class<?>... argTypes) {
         try {
             return clazz.getConstructor(argTypes);
         } catch (NoSuchMethodException e) {
             throw new IllegalStateException(e);
         }
-
     }
 
-    public static Object instantiate(Constructor ctor, Object... args) {
+    public static Object instantiate(Constructor<?> ctor, Object... args) {
         try {
             return ctor.newInstance(args);
         } catch (Exception e) {
@@ -237,14 +266,13 @@ public class ClassUtils {
     }
 
     /**
-     *
      * @param type
      * @param annotation
      * @return
      * @since 1.3
      */
     public static List<Method> getAnnotatedMethods(final Class<?> type, final Class<? extends Annotation> annotation) {
-        final List<Method> methods = new ArrayList<Method>();
+        final List<Method> methods = new ArrayList<>();
         Class<?> clazz = type;
         while (!Object.class.equals(clazz)) {
             Method[] currentClassMethods = clazz.getDeclaredMethods();
@@ -260,28 +288,50 @@ public class ClassUtils {
     }
 
     /**
+     * Sets additional ClassLoader for {@link #getResourceAsStream(String)} and {@link #forName(String)} to use
+     * It is used in addition to the thread context class loader and the system class loader.
+
+     * @param classLoader class loader to use
+     * @since 2.0.4
+     */
+    public static void setAdditionalClassLoader(ClassLoader classLoader) {
+        ADDITIONAL_CLASS_LOADER.set(classLoader);
+    }
+
+    /**
+     * Removes the additional ClassLoader set by {@link #setAdditionalClassLoader(ClassLoader)}.
+     * This must be called to avoid memory leaks.
+     *
+     * @since 2.0.4
+     */
+    public static void removeAdditionalClassLoader() {
+        ADDITIONAL_CLASS_LOADER.remove();
+    }
+
+    /**
      * @since 1.0
      */
-    private static interface ClassLoaderAccessor {
-        Class loadClass(String fqcn);
+    private interface ClassLoaderAccessor {
+        Class<?> loadClass(String fqcn);
+
         InputStream getResourceStream(String name);
     }
 
     /**
      * @since 1.0
      */
-    private static abstract class ExceptionIgnoringAccessor implements ClassLoaderAccessor {
+    private abstract static class ExceptionIgnoringAccessor implements ClassLoaderAccessor {
 
-        public Class loadClass(String fqcn) {
-            Class clazz = null;
+        public Class<?> loadClass(String fqcn) {
+            Class<?> clazz = null;
             ClassLoader cl = getClassLoader();
             if (cl != null) {
                 try {
                     //SHIRO-767: Use Class.forName instead of cl.loadClass(), as byte arrays would fail otherwise.
                     clazz = Class.forName(fqcn, false, cl);
                 } catch (ClassNotFoundException e) {
-                    if (log.isTraceEnabled()) {
-                        log.trace("Unable to load clazz named [" + fqcn + "] from class loader [" + cl + "]");
+                    if (LOGGER.isTraceEnabled()) {
+                        LOGGER.trace("Unable to load clazz named [" + fqcn + "] from class loader [" + cl + "]");
                     }
                 }
             }
@@ -301,8 +351,8 @@ public class ClassUtils {
             try {
                 return doGetClassLoader();
             } catch (Throwable t) {
-                if (log.isDebugEnabled()) {
-                    log.debug("Unable to acquire ClassLoader.", t);
+                if (LOGGER.isDebugEnabled()) {
+                    LOGGER.debug("Unable to acquire ClassLoader.", t);
                 }
             }
             return null;
