@@ -27,8 +27,11 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
 import javax.servlet.http.HttpSessionBindingEvent;
 import javax.servlet.http.HttpSessionBindingListener;
-import java.util.*;
-
+import java.util.Collection;
+import java.util.Enumeration;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.Set;
 
 /**
  * Wrapper class that uses a Shiro {@link Session Session} under the hood for all session operations instead of the
@@ -38,18 +41,20 @@ import java.util.*;
  *
  * @since 0.2
  */
+@SuppressWarnings("checkstyle:MagicNumber")
 public class ShiroHttpSession implements HttpSession {
 
-    //TODO - complete JavaDoc
-
+    /**
+     * default session id name.
+     */
     public static final String DEFAULT_SESSION_ID_NAME = "JSESSIONID";
 
-    private static final Enumeration EMPTY_ENUMERATION = new Enumeration() {
+    private static final Enumeration<String> EMPTY_ENUMERATION = new Enumeration<>() {
         public boolean hasMoreElements() {
             return false;
         }
 
-        public Object nextElement() {
+        public String nextElement() {
             return null;
         }
     };
@@ -61,19 +66,20 @@ public class ShiroHttpSession implements HttpSession {
                     return null;
                 }
 
-                public Enumeration getIds() {
+                public Enumeration<String> getIds() {
                     return EMPTY_ENUMERATION;
                 }
             };
 
-    protected ServletContext servletContext = null;
-    protected HttpServletRequest currentRequest = null;
-    protected Session session = null; //'real' Shiro Session
+    protected ServletContext servletContext;
+    protected HttpServletRequest currentRequest;
+    //'real' Shiro Session
+    protected Session session;
 
     public ShiroHttpSession(Session session, HttpServletRequest currentRequest, ServletContext servletContext) {
         if (session instanceof HttpServletSession) {
-            String msg = "Session constructor argument cannot be an instance of HttpServletSession.  This is enforced to " +
-                    "prevent circular dependencies and infinite loops.";
+            String msg = "Session constructor argument cannot be an instance of HttpServletSession.  This is enforced to "
+                    + "prevent circular dependencies and infinite loops.";
             throw new IllegalArgumentException(msg);
         }
         this.session = session;
@@ -115,7 +121,7 @@ public class ShiroHttpSession implements HttpSession {
 
     public int getMaxInactiveInterval() {
         try {
-            return (new Long(getSession().getTimeout() / 1000)).intValue();
+            return (Long.valueOf(getSession().getTimeout() / 1000)).intValue();
         } catch (InvalidSessionException e) {
             throw new IllegalStateException(e);
         }
@@ -134,11 +140,12 @@ public class ShiroHttpSession implements HttpSession {
         }
     }
 
+    @Deprecated
+    @Override
     public Object getValue(String s) {
         return getAttribute(s);
     }
 
-    @SuppressWarnings({"unchecked"})
     protected Set<String> getKeyNames() {
         Collection<Object> keySet;
         try {
@@ -153,25 +160,27 @@ public class ShiroHttpSession implements HttpSession {
                 keyNames.add(o.toString());
             }
         } else {
-            keyNames = Collections.EMPTY_SET;
+            keyNames = Set.of();
         }
         return keyNames;
     }
 
-    public Enumeration getAttributeNames() {
+    @Override
+    public Enumeration<String> getAttributeNames() {
         Set<String> keyNames = getKeyNames();
-        final Iterator iterator = keyNames.iterator();
-        return new Enumeration() {
+        final Iterator<String> iterator = keyNames.iterator();
+        return new Enumeration<>() {
             public boolean hasMoreElements() {
                 return iterator.hasNext();
             }
 
-            public Object nextElement() {
+            public String nextElement() {
                 return iterator.next();
             }
         };
     }
 
+    @Deprecated
     public String[] getValueNames() {
         Set<String> keyNames = getKeyNames();
         String[] array = new String[keyNames.size()];
@@ -212,6 +221,7 @@ public class ShiroHttpSession implements HttpSession {
         }
     }
 
+    @Deprecated
     public void putValue(String s, Object o) {
         setAttribute(s, o);
     }
@@ -225,6 +235,7 @@ public class ShiroHttpSession implements HttpSession {
         }
     }
 
+    @Deprecated
     public void removeValue(String s) {
         removeAttribute(s);
     }
